# XNEngine

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  build.bat  cmake_install.cmake
assets/: duck.cjson  scene.json
assets/objects/: cube.xneo  floor.xneo  one_spritesheet.xneo  scene.xneo
include/: zconf.h  zlib.h
lib/cmake/json-c/: json-c-targets.cmake
lib/libpng/: libpng16-noconfig.cmake  libpng16.cmake
lib/pkgconfig/: cglm.pc  glew.pc  glfw3.pc  json-c.pc  libpng.pc
shaders/: framebuffer.glsl  shader.glsl  sprite.glsl
share/pkgconfig/: nlohmann_json.pc  zlib.pc
src/: main.c  main.cpp  main.txt  xne.h
src/core/: CMakeCache.txt  CmakeLists.txt  Makefile  buffer.c  buffer.h  cmake_install.cmake  compression.c  compression.h  core.h  debug.c  debug.h  file.c  file.h  math.h  str.c  str.h  string.c  string.h  types.h  version.h
src/engine/: CmakeLists.txt  Makefile  cmake_install.cmake  engine.c  engine.cpp  engine.h  grid.c  grid.h  material.h  model.c  model.cpp  model.h  objects.c  objects.h  scene.c  scene.h  sprite.c  sprite.cpp  sprite.h  transform.c  transform.h
src/graphics/: Makefile  camera.c  camera.cpp  camera.h  cmake_install.cmake  device.c  device.cpp  device.h  framebuffer.c  framebuffer.h  graphics.c  graphics.cpp  graphics.h  light.c  light.h  lights.h  material.h  mesh.c  mesh.cpp  mesh.h  shader.c  shader.cpp  shader.h  texture.c  texture.cpp  texture.h
src/graphics/ui/: Makefile  cmake_install.cmake  font.c  font.h  nk.h  ui.c  ui.cpp  ui.h  uix.c  uix.h
tools/: README.md  cube.xneo  floor.dae  floor.xneo  tools.sln  xne-tools.sln
tools/.model_converter/: Dockerfile  README.md  model_converter.csproj  model_converter.sln
tools/.model_converter/src/: Program.cs
tools/.model_converter/src/core/: Asset.cs  ExportDesc.cs  Exporter.cs  ImportDesc.cs  Importer.cs  Material.cs  Mesh.cs  Node.cs  Scene.cs  Shader.cs  Texture.cs
tools/xne-assets/: AStream.cs  Asset.cs  Debug.cs  Defs.cs  File.cs  MStream.cs  Utils.cs  xne-assets.csproj
tools/xne-blender/: __init__.py
tools/xne-cli/: Dockerfile  Program.cs  xne-cli.csproj
tools/xne-tools-assets/: Asset.cs  AssetContext.cs  AssetStream.cs  AssetType.cs  Compress.cs  Debug.cs  File.cs  IAsset.cs  IRaw.cs  README.md  xne-tools-assets.csproj
tools/xne-tools-assets/Model/: Material.cs  Mesh.cs  Model.cs  ModelStream.cs  Shader.cs  Texture.cs  Transform.cs
tools/xne-tools-cmd/: Asks.cs  Dockerfile  Program.cs  xne-tools-cmd.csproj
tools/xne-tools-editor.removed/: App.xaml  App.xaml.cs  ExportWindow.xaml  ExportWindow.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  MissingItem.cs  NewProjectWindow.xaml  NewProjectWindow.xaml.cs  xne-tools-editor.csproj
tools/xne-tools-editor.removed/Templates/: AssetController.xaml  AssetController.xaml.cs
